--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "svg-sprite-vue-generator",
   "version": "1.0.0",
+  "description": "Vue component runtime generator for svg-sprite-loader.",
+  "keywords": [
+    "vue",
+    "svg-sprite-loader"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Akimyou/svg-sprite-vue-generator.git"
+  },
   "main": "lib/svg-sprite-vue-generator.js",
-  "private": false,
   "scripts": {
     "demo:serve": "vue-cli-service serve",
     "demo:build": "vue-cli-service build"
