--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svg-sprite-vue-generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Vue component runtime generator for svg-sprite-loader.",
   "keywords": [
     "vue",
@@ -29,7 +29,9 @@
     "vue-template-compiler": "^2.6.10"
   },
   "babel": {
-    "presets": [ "@vue/app" ]
+    "presets": [
+      "@vue/app"
+    ]
   },
   "postcss": {
     "plugins": {
