--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "demo:serve": "vue-cli-service serve",
     "demo:build": "vue-cli-service build"
   },
-  "dependencies": {},
+  "dependencies": {
+    "pascal-case": "2.0.1"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
     "babel-loader": "^8.1.0",
     "core-js": "^2.6.5",
-    "pascal-case": "2.0.1",
     "svg-sprite-loader": "^4.2.1",
     "svgo-loader": "^2.2.1",
     "vue": "^2.6.10",
